package fr.miage;

import fr.miage.Composant;

/**
 * Created by nijeyaku on 08/11/2016.
 */
public class Message extends Composant {

    String contenu;

    public Message(String c)
    {
        this.contenu = c;

    }
}
